brain/sources/prod-metadata/objects/Resume__c/Resume__c.object-meta.xml
<CustomObject>
    <label>Resume Creation</label>
    <nameField>
        <displayFormat>RES-{00000}</displayFormat>
        <label>Resume ID-</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resume Creations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>