brain/sources/prod-metadata/objects/Resume__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved  By</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipName>Resume1</relationshipName>
    <type>Lookup</type>
</CustomField>