brain/sources/prod-metadata/objects/Resume__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Resume</relationshipName>
    <type>Lookup</type>
</CustomField>