brain/sources/prod-metadata/objects/Resume__c/fields/Niche__c.field-meta.xml
<CustomField>
    <fullName>Niche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Niche</label>
    <referenceTo>Niche__c</referenceTo>
    <relationshipName>Resume</relationshipName>
    <type>Lookup</type>
</CustomField>