brain/sources/prod-metadata/objects/Resume__c/fields/Resume_Status__c.field-meta.xml
<CustomField>
    <fullName>Resume_Status__c</fullName>
    <label>Resume Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>