brain/sources/prod-metadata/objects/Resume__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uploaded By</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipName>Resume</relationshipName>
    <type>Lookup</type>
</CustomField>